Add ability to view job-to-job lineage
* Adds a job-to-job lineage view to marquez
* Adds parent nodes to the edges viewed
* Makes this view togglable so it can be disabled if you do not want the
  extra queries